# bazaar

./: .config.yml  .dockerignore  .env  .env.demo  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.migrations  Untitled Diagram.drawio  configuration.yaml  docker-compose.demo.yaml  docker-compose.yaml  example.configuration.yaml  functionality.md  otel-agent-config.yaml  otel-collector-config.yaml  readme.md  schema.graphql  sqlx-data.json
.circleci/: config.yml
configuration/: base.yaml  local.yaml  production.yaml  test.yaml
migrations/: 20201128100614_create_customers_table.sql  20201203161904_create_shopping_cart_table.sql  20201205154558_create_items_table.sql  20201207183920_create_auth_table.sql
scripts/: init_db.sh  seed_items.sql
src/: build_app.rs  configuration.rs  constants.rs  error.rs  generate_schema.rs  graphql.rs  lib.rs  main.rs  startup.rs  telemetry.rs  test_helpers.rs
src/auth/: authenticate.rs  authorize.rs  constants.rs  db.rs  mod.rs  token.rs
src/database/: auth.rs  cart_item.rs  customer.rs  mod.rs  shopping_cart.rs
src/graphql/: extension.rs  helpers.rs  mod.rs  mutation.rs  query.rs
src/graphql/validators/: customer_update.rs  mod.rs
src/models/: auth.rs  cart_item.rs  cookies.rs  currency.rs  customer.rs  customer_type.rs  mod.rs  shopping_cart.rs  token.rs  tokens.rs
src/routes/: graphql.rs  log_out.rs  login.rs  mod.rs  refresh.rs  sign_up.rs
src/tests/: health_check.rs
tests/: health_check.rs  integration.rs  mutation.rs  query.rs  refresh.rs
tests/helpers/: app.rs  constants.rs  database.rs  env_vars.rs  graphql.rs  math.rs  mod.rs  reqwest.rs  tokens.rs  types.rs
tests/integration/: mod.rs
tests/schema/: create_customer_MUTATION.graphql
